[gd_scene load_steps=2 format=3 uid="uid://dp1x53i081wvs"]

[ext_resource type="Script" path="res://menu.gd" id="1_ga1oh"]

[node name="Menu" type="Control"]
layout_mode = 3
anchor_left = 0.001
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.152
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ga1oh")

[node name="newGame" type="Button" parent="."]
layout_mode = 0
offset_left = 425.0
offset_top = 153.0
offset_right = 584.0
offset_bottom = 196.0
text = "New Game"

[node name="continue" type="Button" parent="."]
layout_mode = 0
offset_left = 434.0
offset_top = 212.0
offset_right = 588.0
offset_bottom = 248.0
text = "Continue"

[node name="options" type="Button" parent="."]
layout_mode = 0
offset_left = 435.0
offset_top = 262.0
offset_right = 569.0
offset_bottom = 303.0
text = "Options"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 394.0
offset_top = 333.0
offset_right = 653.0
offset_bottom = 424.0
text = "Exit"

[connection signal="pressed" from="newGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
